removed LinkedList from some classes for performance reasons